# digital_weight_device

./: .gitignore  BOM.csv  BOM.md  BOM.py  BOM.xlsx  LICENSE  README.md  README_V4DESIGN.md  README_V5DESIGN.md
api/: README.md
cad/: README.md
cad/accessories/: paddleboard_end.ipt  row_wheel_holder_rear.ipt
cad/bearings/: bearing_100x80x10.ipt  bearing_22x8x7.ipt  bearing_42x30x7.ipt  bearing_58x45x7.ipt
cad/v4/: arm_head.ipt  arm_head_back.ipt  arm_head_top.ipt  arm_main.ipt  battery_cover_left.ipt  battery_cover_right.ipt  battery_mnt_left.ipt  battery_mnt_right.ipt  control_knob_cover.ipt  drivetrain.iam  frame_rring0.ipt  frame_rring1.ipt  frame_rring1_r90.ipt  frame_rring2.ipt  frame_rring3.ipt  full_assembly.iam  handle.ipt  motor1_drive_mount.ipt  motor1_drive_mount_spacer.ipt  motor1_maghold.ipt  motor2_drive_mount.ipt  motor2_drive_mount_spacer.ipt  motor2_planetary_gear.ipt  motor_mount_plate.ipt  planetary_bearing_spacer.ipt  separator_bottom_mid.ipt  separator_bottom_mid_bk.ipt  separator_bottom_mid_cover.ipt  (+9 more)
calibration/: README.md
design/: motor_data.csv  motor_design.py  motor_stats.md
electrical/: README.md
embedded_gui/: README.md
firmware/: README.md
firmware/esp32s3_lillygo_amoled/examples/LunarMass/src/: CMakeLists.txt  filelist.txt  ui.c  ui_helpers.c
firmware/esp32s3_lillygo_amoled/examples/LunarMass/src/components/: ui_comp_hook.c
firmware/esp32s3_lillygo_amoled/examples/LunarMass/src/fonts/: ui_font_RowFont.c
firmware/esp32s3_lillygo_amoled/examples/LunarMass/src/screens/: ui_StrengthScreen01.c  ui_SystemScreen.c
(+115 files in other folders)
